[gd_scene load_steps=5 format=3 uid="uid://bafo7nspi501e"]

[ext_resource type="PackedScene" uid="uid://bbermgijtupnc" path="res://Scenes/hand_display.tscn" id="1_2xuw3"]
[ext_resource type="Script" path="res://Scripts/blackjack_screen.gd" id="1_ev3fv"]
[ext_resource type="PackedScene" uid="uid://b8ha7sd4v4hus" path="res://Scenes/deck.tscn" id="2_4ah77"]
[ext_resource type="PackedScene" uid="uid://v053ac4efnfd" path="res://Scenes/blackjack_control_panel.tscn" id="3_2sk67"]

[node name="BlackJackScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ev3fv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DealerHandDisplay" parent="VBoxContainer" instance=ExtResource("1_2xuw3")]
layout_mode = 2
hand_name = "Dealer"

[node name="DealerHandCountDisplay" type="Label" parent="VBoxContainer/DealerHandDisplay"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Value: 10"

[node name="PlayerHandDisplay" parent="VBoxContainer" instance=ExtResource("1_2xuw3")]
layout_mode = 2
hand_name = "Player"

[node name="PlayerHandCountDisplay" type="Label" parent="VBoxContainer/PlayerHandDisplay"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Value: 10"

[node name="WinLoseLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="BlackJackControlPanel" parent="VBoxContainer" instance=ExtResource("3_2sk67")]
layout_mode = 2

[node name="Deck" parent="." instance=ExtResource("2_4ah77")]

[connection signal="hit" from="VBoxContainer/BlackJackControlPanel" to="." method="_on_hit"]
[connection signal="play_again" from="VBoxContainer/BlackJackControlPanel" to="." method="_on_play_again"]
[connection signal="stand" from="VBoxContainer/BlackJackControlPanel" to="." method="_on_stand"]
